Creado mediante Colaboratory

--- a/Tarea2_AGRICOLA.ipynb
+++ b/Tarea2_AGRICOLA.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeVAtmhGwQW903qj1vxvsh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,11 +62,121 @@
       "source": [
         "# ECUACION 2\n",
         "\n",
-        "NOTA: LE CORRESPONDE A justo.fuentes@unisucre.edu.co"
+        "NOTA: LE CORRESPONDE A justo.fuentes@unisucre.edu.co\n",
+        "\n",
+        "$$\n",
+        "B = \\frac{2 * H}{Tan(\\alpha)}\n",
+        "$$"
       ],
       "metadata": {
         "id": "ACqpAQ3y4gyx"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "h = float(input(\"Ingrese Altura H:\\n\"))\n",
+        "alfa = float(Input(\"Ingrese alfa: \\n\"))\n",
+        "\n",
+        "b = 2 * h / math.tan(alfa)\n",
+        "\n",
+        "print(\"B = \", b)"
+      ],
+      "metadata": {
+        "id": "TK_K8OG58v_1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir(math)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HFJEmnD39B-D",
+        "outputId": "31609f2a-8b56-4005-bf52-4e4c4c10ccad"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__doc__',\n",
+              " '__loader__',\n",
+              " '__name__',\n",
+              " '__package__',\n",
+              " '__spec__',\n",
+              " 'acos',\n",
+              " 'acosh',\n",
+              " 'asin',\n",
+              " 'asinh',\n",
+              " 'atan',\n",
+              " 'atan2',\n",
+              " 'atanh',\n",
+              " 'ceil',\n",
+              " 'comb',\n",
+              " 'copysign',\n",
+              " 'cos',\n",
+              " 'cosh',\n",
+              " 'degrees',\n",
+              " 'dist',\n",
+              " 'e',\n",
+              " 'erf',\n",
+              " 'erfc',\n",
+              " 'exp',\n",
+              " 'expm1',\n",
+              " 'fabs',\n",
+              " 'factorial',\n",
+              " 'floor',\n",
+              " 'fmod',\n",
+              " 'frexp',\n",
+              " 'fsum',\n",
+              " 'gamma',\n",
+              " 'gcd',\n",
+              " 'hypot',\n",
+              " 'inf',\n",
+              " 'isclose',\n",
+              " 'isfinite',\n",
+              " 'isinf',\n",
+              " 'isnan',\n",
+              " 'isqrt',\n",
+              " 'lcm',\n",
+              " 'ldexp',\n",
+              " 'lgamma',\n",
+              " 'log',\n",
+              " 'log10',\n",
+              " 'log1p',\n",
+              " 'log2',\n",
+              " 'modf',\n",
+              " 'nan',\n",
+              " 'nextafter',\n",
+              " 'perm',\n",
+              " 'pi',\n",
+              " 'pow',\n",
+              " 'prod',\n",
+              " 'radians',\n",
+              " 'remainder',\n",
+              " 'sin',\n",
+              " 'sinh',\n",
+              " 'sqrt',\n",
+              " 'tan',\n",
+              " 'tanh',\n",
+              " 'tau',\n",
+              " 'trunc',\n",
+              " 'ulp']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
