Creado mediante Colaboratory

--- a/Tarea2_AGRICOLA.ipynb
+++ b/Tarea2_AGRICOLA.ipynb
@@ -77,10 +77,12 @@
       "source": [
         "import math\n",
         "\n",
+        "r = math.pi / 180\n",
+        "\n",
         "h = float(input(\"Ingrese Altura H:\\n\"))\n",
         "alfa = float(Input(\"Ingrese alfa: \\n\"))\n",
         "\n",
-        "b = 2 * h / math.tan(alfa)\n",
+        "b = 2 * h / math.tan(alfa * r)\n",
         "\n",
         "print(\"B = \", b)"
       ],
@@ -89,6 +91,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "M_N43fZq-8b2"
+      }
     },
     {
       "cell_type": "code",
@@ -180,12 +189,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import math\n",
+        "\n",
+        "r = math.pi / 180\n",
+        "\n",
+        "math.sin(90*r)"
+      ],
       "metadata": {
-        "id": "bzcyBQ394jrQ"
+        "id": "bzcyBQ394jrQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "140b0548-8f98-464e-c385-07a5c005e65b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
