Creado mediante Colaboratory

--- a/Tarea2_AGRICOLA.ipynb
+++ b/Tarea2_AGRICOLA.ipynb
@@ -94,7 +94,61 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Explicación del código de la Base\n",
+        "\n",
+        "El código proporcionado en Python realiza un cálculo simple relacionado con la geometría y la trigonometría. A continuación, se proporciona una explicación detallada en formato Markdown:\n",
+        "\n",
+        "```python\n",
+        "1. import math\n",
+        "```\n",
+        "\n",
+        "Este primer paso importa el módulo `math`, que proporciona funciones matemáticas y constantes, como el valor de π (pi) necesario para realizar cálculos trigonométricos.\n",
+        "\n",
+        "```python\n",
+        "2. r = math.pi / 180\n",
+        "```\n",
+        "\n",
+        "Se define la variable `r` que almacena el valor de π dividido por 180. Esta línea es parte de la conversión de grados a radianes. En matemáticas y trigonometría, a menudo se trabaja en radianes en lugar de grados para realizar cálculos trigonométricos.\n",
+        "\n",
+        "```python\n",
+        "3. h = float(input(\"Ingrese Altura H:\\n\"))\n",
+        "```\n",
+        "\n",
+        "Se solicita al usuario que ingrese un valor para la altura `H` y se almacena en la variable `h`. La función `float(input(...))` se utiliza para leer la entrada del usuario como un número decimal (valor de coma flotante).\n",
+        "\n",
+        "```python\n",
+        "4. alfa = float(input(\"Ingrese alfa: \\n\"))\n",
+        "```\n",
+        "\n",
+        "Similarmente, se solicita al usuario que ingrese un valor para el ángulo `alfa` y se almacena en la variable `alfa`.\n",
+        "\n",
+        "```python\n",
+        "5. b = 2 * h / math.tan(alfa * r)\n",
+        "```\n",
+        "\n",
+        "Aquí es donde se realiza el cálculo principal. Se calcula el valor de `b` utilizando la fórmula `2 * h / tan(alfa)`, pero antes de eso, el ángulo `alfa` se convierte de grados a radianes multiplicándolo por `r`.\n",
+        "\n",
+        "- `2 * h` multiplica la altura `h` por 2.\n",
+        "- `math.tan(alfa * r)` calcula la tangente del ángulo `alfa` convertido a radianes.\n",
+        "\n",
+        "Luego, se divide `2 * h` por el resultado de la tangente para obtener el valor de `b`. El resultado es almacenado en la variable `b`.\n",
+        "\n",
+        "```python\n",
+        "6. print(\"B = \", b)\n",
+        "```\n",
+        "\n",
+        "Finalmente, se muestra el resultado en la consola utilizando la función `print()`. El valor de `b` calculado se imprime en la pantalla junto con la etiqueta \"B = \".\n",
+        "\n",
+        "**Ejemplo de uso:**\n",
+        "Supongamos que el usuario ingresa:\n",
+        "- `Altura H` como 10 (por ejemplo, una altura de 10 metros).\n",
+        "- `alfa` como 30 (por ejemplo, un ángulo de 30 grados).\n",
+        "\n",
+        "El programa calculará `b` utilizando la fórmula proporcionada y mostrará el resultado en la pantalla.\n",
+        "\n",
+        "Es importante destacar que este código realiza un cálculo específico basado en la altura y el ángulo proporcionados por el usuario, lo que puede ser útil en aplicaciones relacionadas con la geometría y la trigonometría, como la resolución de problemas de diseño o construcción."
+      ],
       "metadata": {
         "id": "M_N43fZq-8b2"
       }
@@ -203,7 +257,7 @@
         },
         "outputId": "140b0548-8f98-464e-c385-07a5c005e65b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
